--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@
 
   .skeleton {
     opacity: 0.7;
+    border-radius: 0.75rem;
     animation: skeleton-loading 1s linear infinite alternate;
   }
 
